--- a/public/series/index.html
+++ b/public/series/index.html
@@ -1,25 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><meta charset="utf-8">
+<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="index, follow">
+<meta name="robots" content="noindex, nofollow">
 <title>Series | Haze 的记事本</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="https://hazema0.github.io/series/">
+<link rel="canonical" href="http://localhost:1313/series/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.45e028aa8ce0961349adf411b013ee39406be2c0bc80d4ea3fc04555f7f4611a.css" integrity="sha256-ReAoqozglhNJrfQRsBPuOUBr4sC8gNTqP8BFVff0YRo=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://hazema0.github.io/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://hazema0.github.io/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://hazema0.github.io/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://hazema0.github.io/apple-touch-icon.png">
-<link rel="mask-icon" href="https://hazema0.github.io/safari-pinned-tab.svg">
+<link rel="icon" href="http://localhost:1313/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
+<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
+<link rel="mask-icon" href="http://localhost:1313/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" type="application/rss+xml" href="https://hazema0.github.io/series/index.xml">
-<link rel="alternate" hreflang="en" href="https://hazema0.github.io/series/">
+<link rel="alternate" type="application/rss+xml" href="http://localhost:1313/series/index.xml">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/series/">
 <noscript>
     <style>
         #theme-toggle,
@@ -56,15 +56,7 @@
         }
 
     </style>
-</noscript><meta property="og:url" content="https://hazema0.github.io/series/">
-  <meta property="og:site_name" content="Haze 的记事本">
-  <meta property="og:title" content="Series">
-  <meta property="og:locale" content="en">
-  <meta property="og:type" content="website">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Series">
-<meta name="twitter:description" content="">
-
+</noscript>
 </head>
 
 <body class="list" id="top">
@@ -82,7 +74,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://hazema0.github.io/" accesskey="h" title="Haze 的记事本 (Alt + H)">Haze 的记事本</a>
+            <a href="http://localhost:1313/" accesskey="h" title="Haze 的记事本 (Alt + H)">Haze 的记事本</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -108,17 +100,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://hazema0.github.io/archives/" title="存档">
+                <a href="http://localhost:1313/archives/" title="存档">
                     <span>存档</span>
                 </a>
             </li>
             <li>
-                <a href="https://hazema0.github.io/tags/" title="标签">
+                <a href="http://localhost:1313/tags/" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
-                <a href="https://hazema0.github.io/search/" title="搜索">
+                <a href="http://localhost:1313/search/" title="搜索">
                     <span>搜索</span>
                 </a>
             </li>
@@ -135,7 +127,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="https://hazema0.github.io/">Haze 的记事本</a></span> · 
+        <span>&copy; 2025 <a href="http://localhost:1313/">Haze 的记事本</a></span> · 
 
     <span>
         Powered by
