--- a/public/404.html
+++ b/public/404.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" dir="auto">
 
-<head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=11703&amp;path=livereload" data-no-instant defer></script><meta charset="utf-8">
+<head><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <title>404 Page not found | Haze 的记事本</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="canonical" href="http://localhost:11703/404.html">
+<link rel="canonical" href="https://hazema0.github.io/404.html">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.9de45e225101e4f99701d2b68fc6b8a1ef6027928be6391fa15bf7f56326c909.css" integrity="sha256-neReIlEB5PmXAdK2j8a4oe9gJ5KL5jkfoVv39WMmyQk=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:11703/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:11703/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:11703/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:11703/apple-touch-icon.png">
-<link rel="mask-icon" href="http://localhost:11703/safari-pinned-tab.svg">
+<link rel="icon" href="https://hazema0.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://hazema0.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://hazema0.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://hazema0.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://hazema0.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:11703/404.html">
+<link rel="alternate" hreflang="en" href="https://hazema0.github.io/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -55,7 +55,15 @@
         }
 
     </style>
-</noscript>
+</noscript><meta property="og:url" content="https://hazema0.github.io/404.html">
+  <meta property="og:site_name" content="Haze 的记事本">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="404 Page not found">
+<meta name="twitter:description" content="">
+
 </head>
 
 <body class="list" id="top">
@@ -73,7 +81,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="http://localhost:11703/" accesskey="h" title="Haze 的记事本 (Alt + H)">Haze 的记事本</a>
+            <a href="https://hazema0.github.io/" accesskey="h" title="Haze 的记事本 (Alt + H)">Haze 的记事本</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -99,17 +107,17 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:11703/archives/" title="存档">
+                <a href="https://hazema0.github.io/archives/" title="存档">
                     <span>存档</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:11703/tags/" title="标签">
+                <a href="https://hazema0.github.io/tags/" title="标签">
                     <span>标签</span>
                 </a>
             </li>
             <li>
-                <a href="http://localhost:11703/search/" title="搜索">
+                <a href="https://hazema0.github.io/search/" title="搜索">
                     <span>搜索</span>
                 </a>
             </li>
@@ -121,7 +129,7 @@
     </main>
     
 <footer class="footer">
-        <span>&copy; 2025 <a href="http://localhost:11703/">Haze 的记事本</a></span> · 
+        <span>&copy; 2025 <a href="https://hazema0.github.io/">Haze 的记事本</a></span> · 
 
     <span>
         Powered by
